--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@
 	margin: 0;
 	padding: 0;
 	font-size: 12px;
+	font-weight: bold;
 	border: 0px solid #CCCCCC;
 }
 
 .fw-feed-title {
-	margin: 0 0 7px 0;
-	padding: 0 0 7px 0;
+	margin: 0 0 0px 0;
+	padding: 5px;
 	border-bottom: 1px dashed #CCCCCC;
 	clear: both;
 }
